Fixed command injection issue